--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+html{
+  width: 100vw;
+  height: 100vh;
+}
+#rood{
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+}
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
